--- a/index.html
+++ b/index.html
@@ -1011,18 +1011,18 @@ window.Engine = SugarCube.Engine;</script><tw-passagedata pid="1" name="1" tags=
   &lt;button id=&quot;submitBtn&quot; class=&quot;bsti-nextbtn&quot;&gt;查看專屬陰影人格&lt;/button&gt;
 &lt;/div&gt;
 
-&lt;!-- Formspree 表單區 --&gt;
-&lt;form id=&quot;resultForm&quot; action=&quot;https://formspree.io/f/xzzvpwdk&quot; method=&quot;POST&quot; style=&quot;display: none;&quot;&gt;
-  &lt;input type=&quot;hidden&quot; name=&quot;name&quot; value=&quot;&lt;&lt;=$name&gt;&gt;&quot;&gt;
-  &lt;input type=&quot;hidden&quot; name=&quot;code&quot; id=&quot;form-code&quot; value=&quot;&quot;&gt;
-  &lt;input type=&quot;hidden&quot; name=&quot;i&quot; value=&quot;&lt;&lt;=State.variables.I&gt;&gt;&quot;&gt;
-  &lt;input type=&quot;hidden&quot; name=&quot;e&quot; value=&quot;&lt;&lt;=State.variables.E&gt;&gt;&quot;&gt;
-  &lt;input type=&quot;hidden&quot; name=&quot;a&quot; value=&quot;&lt;&lt;=State.variables.A&gt;&gt;&quot;&gt;
-  &lt;input type=&quot;hidden&quot; name=&quot;d&quot; value=&quot;&lt;&lt;=State.variables.D&gt;&gt;&quot;&gt;
-  &lt;input type=&quot;hidden&quot; name=&quot;o&quot; value=&quot;&lt;&lt;=State.variables.O&gt;&gt;&quot;&gt;
-  &lt;input type=&quot;hidden&quot; name=&quot;w&quot; value=&quot;&lt;&lt;=State.variables.W&gt;&gt;&quot;&gt;
-  &lt;input type=&quot;hidden&quot; name=&quot;g&quot; value=&quot;&lt;&lt;=State.variables.G&gt;&gt;&quot;&gt;
-  &lt;input type=&quot;hidden&quot; name=&quot;l&quot; value=&quot;&lt;&lt;=State.variables.L&gt;&gt;&quot;&gt;
+&lt;!-- Formspree 表單區（隱藏） --&gt;
+&lt;form id=&quot;resultForm&quot; action=&quot;https://formspree.io/f/xzzvpwdk&quot; method=&quot;POST&quot; style=&quot;display:none;&quot;&gt;
+  &lt;input type=&quot;hidden&quot; name=&quot;name&quot; value=&quot;&lt;&lt;=$name&gt;&gt;&quot; /&gt;
+  &lt;input type=&quot;hidden&quot; name=&quot;code&quot; id=&quot;form-code&quot; value=&quot;&quot; /&gt;
+  &lt;input type=&quot;hidden&quot; name=&quot;i&quot; value=&quot;&lt;&lt;=State.variables.I&gt;&gt;&quot; /&gt;
+  &lt;input type=&quot;hidden&quot; name=&quot;e&quot; value=&quot;&lt;&lt;=State.variables.E&gt;&gt;&quot; /&gt;
+  &lt;input type=&quot;hidden&quot; name=&quot;a&quot; value=&quot;&lt;&lt;=State.variables.A&gt;&gt;&quot; /&gt;
+  &lt;input type=&quot;hidden&quot; name=&quot;d&quot; value=&quot;&lt;&lt;=State.variables.D&gt;&gt;&quot; /&gt;
+  &lt;input type=&quot;hidden&quot; name=&quot;o&quot; value=&quot;&lt;&lt;=State.variables.O&gt;&gt;&quot; /&gt;
+  &lt;input type=&quot;hidden&quot; name=&quot;w&quot; value=&quot;&lt;&lt;=State.variables.W&gt;&gt;&quot; /&gt;
+  &lt;input type=&quot;hidden&quot; name=&quot;g&quot; value=&quot;&lt;&lt;=State.variables.G&gt;&gt;&quot; /&gt;
+  &lt;input type=&quot;hidden&quot; name=&quot;l&quot; value=&quot;&lt;&lt;=State.variables.L&gt;&gt;&quot; /&gt;
 &lt;/form&gt;
 
 &lt;script&gt;
@@ -1050,11 +1050,13 @@ window.Engine = SugarCube.Engine;</script><tw-passagedata pid="1" name="1" tags=
 
   document.getElementById(&#39;bsti-bars&#39;).innerHTML = html;
 
-  document.getElementById(&quot;submitBtn&quot;).addEventListener(&quot;click&quot;, function() {
+  document.getElementById(&quot;submitBtn&quot;).addEventListener(&quot;click&quot;, function(e) {
+    e.preventDefault(); // 防止按鈕默認行為
+
     document.getElementById(&quot;form-code&quot;).value = &quot;&lt;&lt;=$code&gt;&gt;&quot;;
 
-    var form = document.getElementById(&quot;resultForm&quot;);
-    var formData = new FormData(form);
+    const form = document.getElementById(&quot;resultForm&quot;);
+    const formData = new FormData(form);
 
     fetch(form.action, {
       method: &quot;POST&quot;,
@@ -1064,7 +1066,6 @@ window.Engine = SugarCube.Engine;</script><tw-passagedata pid="1" name="1" tags=
       }
     }).then(response =&gt; {
       if (response.ok) {
-        // 送出成功，跳轉到結果頁面（$code）
         window.location.href = &quot;&lt;&lt;=$code&gt;&gt;&quot;;
       } else {
         alert(&quot;提交失敗，請稍後再試&quot;);
@@ -1073,7 +1074,6 @@ window.Engine = SugarCube.Engine;</script><tw-passagedata pid="1" name="1" tags=
       alert(&quot;提交出錯，請檢查網路&quot;);
     });
   });
-
 })();
 &lt;/script&gt;
 </tw-passagedata><tw-passagedata pid="36" name="EAWG" tags="" position="1325,1150" size="100,100">&lt;div class=&quot;twee-character&quot;&gt;
