--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@ window.Engine = SugarCube.Engine;</script><tw-passagedata pid="1" name="1" tags=
   &lt;/div&gt;
   &lt;div class=&quot;qbox-options&quot;&gt;
     &lt;span class=&quot;qbox-option&quot;&gt;&lt;&lt;link &quot;你回：「我也是一家人吧！」說完還是低頭扒飯，耳根燙到發紅。&quot;&gt;&gt;&lt;&lt;set $E += 1&gt;&gt;&lt;&lt;set $A += 1&gt;&gt;&lt;&lt;goto &quot;9&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
-    &lt;span class=&quot;qbox-option&quot;&gt;&lt;&lt;link &quot;你列數據舉案例，聲音越來越高，心裡卻怕被說愛現。&quot;&gt;&gt;&lt;&lt;set $O += 1&gt;&gt;&lt;&lt;set $G += 1&gt;&gt;&lt;&lt;goto &quot;Q9b&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;qbox-option&quot;&gt;&lt;&lt;link &quot;你列數據舉案例，聲音越來越高，心裡卻怕被說愛現。&quot;&gt;&gt;&lt;&lt;set $O += 1&gt;&gt;&lt;&lt;set $G += 1&gt;&gt;&lt;&lt;goto &quot;9&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
     &lt;span class=&quot;qbox-option&quot;&gt;&lt;&lt;link &quot;你回家腦袋單曲循環「小孩懂什麼」，擔心下次聚會還被笑。&quot;&gt;&gt;&lt;&lt;set $W += 1&gt;&gt;&lt;&lt;set $A += 1&gt;&gt;&lt;&lt;goto &quot;9&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
     &lt;span class=&quot;qbox-option&quot;&gt;&lt;&lt;link &quot;之後聚餐你只顧看手機，嘴上說忙，耳朵卻追著每句話。&quot;&gt;&gt;&lt;&lt;set $D += 1&gt;&gt;&lt;&lt;set $G += 1&gt;&gt;&lt;&lt;goto &quot;9&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
   &lt;/div&gt;
@@ -1011,18 +1011,18 @@ window.Engine = SugarCube.Engine;</script><tw-passagedata pid="1" name="1" tags=
   &lt;button id=&quot;submitBtn&quot; class=&quot;bsti-nextbtn&quot;&gt;查看專屬陰影人格&lt;/button&gt;
 &lt;/div&gt;
 
-&lt;!-- Formspree 表單區（隱藏） --&gt;
-&lt;form id=&quot;resultForm&quot; action=&quot;https://formspree.io/f/xzzvpwdk&quot; method=&quot;POST&quot; style=&quot;display:none;&quot;&gt;
-  &lt;input type=&quot;hidden&quot; name=&quot;name&quot; value=&quot;&lt;&lt;=$name&gt;&gt;&quot; /&gt;
-  &lt;input type=&quot;hidden&quot; name=&quot;code&quot; id=&quot;form-code&quot; value=&quot;&quot; /&gt;
-  &lt;input type=&quot;hidden&quot; name=&quot;i&quot; value=&quot;&lt;&lt;=State.variables.I&gt;&gt;&quot; /&gt;
-  &lt;input type=&quot;hidden&quot; name=&quot;e&quot; value=&quot;&lt;&lt;=State.variables.E&gt;&gt;&quot; /&gt;
-  &lt;input type=&quot;hidden&quot; name=&quot;a&quot; value=&quot;&lt;&lt;=State.variables.A&gt;&gt;&quot; /&gt;
-  &lt;input type=&quot;hidden&quot; name=&quot;d&quot; value=&quot;&lt;&lt;=State.variables.D&gt;&gt;&quot; /&gt;
-  &lt;input type=&quot;hidden&quot; name=&quot;o&quot; value=&quot;&lt;&lt;=State.variables.O&gt;&gt;&quot; /&gt;
-  &lt;input type=&quot;hidden&quot; name=&quot;w&quot; value=&quot;&lt;&lt;=State.variables.W&gt;&gt;&quot; /&gt;
-  &lt;input type=&quot;hidden&quot; name=&quot;g&quot; value=&quot;&lt;&lt;=State.variables.G&gt;&gt;&quot; /&gt;
-  &lt;input type=&quot;hidden&quot; name=&quot;l&quot; value=&quot;&lt;&lt;=State.variables.L&gt;&gt;&quot; /&gt;
+&lt;!-- Formspree 表單區 --&gt;
+&lt;form id=&quot;resultForm&quot; action=&quot;https://formspree.io/f/xzzvpwdk&quot; method=&quot;POST&quot; style=&quot;display: none;&quot;&gt;
+  &lt;input type=&quot;hidden&quot; name=&quot;name&quot; value=&quot;&lt;&lt;=$name&gt;&gt;&quot;&gt;
+  &lt;input type=&quot;hidden&quot; name=&quot;code&quot; id=&quot;form-code&quot; value=&quot;&quot;&gt;
+  &lt;input type=&quot;hidden&quot; name=&quot;i&quot; value=&quot;&lt;&lt;=State.variables.I&gt;&gt;&quot;&gt;
+  &lt;input type=&quot;hidden&quot; name=&quot;e&quot; value=&quot;&lt;&lt;=State.variables.E&gt;&gt;&quot;&gt;
+  &lt;input type=&quot;hidden&quot; name=&quot;a&quot; value=&quot;&lt;&lt;=State.variables.A&gt;&gt;&quot;&gt;
+  &lt;input type=&quot;hidden&quot; name=&quot;d&quot; value=&quot;&lt;&lt;=State.variables.D&gt;&gt;&quot;&gt;
+  &lt;input type=&quot;hidden&quot; name=&quot;o&quot; value=&quot;&lt;&lt;=State.variables.O&gt;&gt;&quot;&gt;
+  &lt;input type=&quot;hidden&quot; name=&quot;w&quot; value=&quot;&lt;&lt;=State.variables.W&gt;&gt;&quot;&gt;
+  &lt;input type=&quot;hidden&quot; name=&quot;g&quot; value=&quot;&lt;&lt;=State.variables.G&gt;&gt;&quot;&gt;
+  &lt;input type=&quot;hidden&quot; name=&quot;l&quot; value=&quot;&lt;&lt;=State.variables.L&gt;&gt;&quot;&gt;
 &lt;/form&gt;
 
 &lt;script&gt;
@@ -1050,13 +1050,11 @@ window.Engine = SugarCube.Engine;</script><tw-passagedata pid="1" name="1" tags=
 
   document.getElementById(&#39;bsti-bars&#39;).innerHTML = html;
 
-  document.getElementById(&quot;submitBtn&quot;).addEventListener(&quot;click&quot;, function(e) {
-    e.preventDefault(); // 防止按鈕默認行為
-
+  document.getElementById(&quot;submitBtn&quot;).addEventListener(&quot;click&quot;, function() {
     document.getElementById(&quot;form-code&quot;).value = &quot;&lt;&lt;=$code&gt;&gt;&quot;;
 
-    const form = document.getElementById(&quot;resultForm&quot;);
-    const formData = new FormData(form);
+    var form = document.getElementById(&quot;resultForm&quot;);
+    var formData = new FormData(form);
 
     fetch(form.action, {
       method: &quot;POST&quot;,
@@ -1066,7 +1064,8 @@ window.Engine = SugarCube.Engine;</script><tw-passagedata pid="1" name="1" tags=
       }
     }).then(response =&gt; {
       if (response.ok) {
-        window.location.href = &quot;&lt;&lt;=$code&gt;&gt;&quot;;
+        // 成功送出表單後，用 SugarCube 跳轉 Passage
+        SugarCube.Engine.play(&quot;&lt;&lt;=$code&gt;&gt;&quot;);
       } else {
         alert(&quot;提交失敗，請稍後再試&quot;);
       }
